--- a/Codes/Ejercicios/readme
+++ b/Codes/Ejercicios/readme
@@ -1,1 +1,1 @@
-
+Se encuentran 4 de los 6 ejercicios propuestos, debido a que fueron los que logré obtener una forma satisfactoria de resolverlos. Los otros dos están en proceso o no he logrado conseguirlo del todo.
